--- a/app/views/v6/employer/create/display-name.html
+++ b/app/views/v6/employer/create/display-name.html
@@ -15,8 +15,8 @@ What employer name do you want on your advert? - Your apprenticeship adverts - {
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl">What employer name do you want on your advert?</h1>
+      <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">What employer name do you want on your advert?</h1>
     <form method="post" action="about-employer">
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
@@ -37,7 +37,7 @@ What employer name do you want on your advert? - Your apprenticeship adverts - {
             </div>
             <div class="govuk-radios__conditional" id="trading-name-conditional">
               <div class="govuk-form-group">
-                <label class="govuk-label govuk-!-font-weight-bold" for="tradingName">Enter employer name</label>
+                <label class="govuk-label" for="tradingName">Enter employer name</label>
                 <input class="govuk-input govuk-input--width-20" id="tradingName" name="tradingName" type="text">
               </div>
             </div>
@@ -47,38 +47,43 @@ What employer name do you want on your advert? - Your apprenticeship adverts - {
                 value="anonymous" data-search-value="Organisation" data-aria-controls="anonymous-conditional">
               <label class="govuk-label govuk-radios__label" for="display-name-anonymous">
                 I do not want an employer name on my advert (be anonymous)<br>
-                <span class="govuk-hint">This could mean fewer people view your advert.</span>
+                <div class="govuk-hint">This could mean fewer people view your advert.</div>
               </label>
             </div>
             <div class="govuk-radios__conditional" id="anonymous-conditional">
               <div class="form-group">
                 <fieldset class="govuk-fieldset" >
-                      <div class="govuk-form-group">
-                          <label class="govuk-label" for="name">
-                              Brief description of what the employer does
-                          </label>
-                          <span class="govuk-hint">For example, car manufacturer or clothing retailer.</span>
-                          <input class="govuk-input " id="name" name="name" type="text">
+                  <div class="govuk-form-group">
+                      <label class="govuk-label" for="name">
+                          Brief description of what the employer does
+                      </label>
+                      <div class="govuk-hint">For example, car manufacturer or clothing retailer.</div>
+                      <input class="govuk-input " id="name" name="name" type="text">
+                  </div>
+               
+                  <div class="govuk-form-group">
+                      <label class="govuk-label" for="address-postcode">
+                        Postcode
+                      </label>
+                      <div class="govuk-hint">
+                          We will only show the first half of the postcode on Find an apprenticeship.
                       </div>
-                      <div class="govuk-form-group">
-                          <label class="govuk-label" for="address-postcode">
-                            Postcode
-                          </label>
-                          <span class="govuk-hint">
-                              We will only show the first half of the postcode on Find an apprenticeship.
-                          </span>
-                          <input class="govuk-input govuk-input--width-20" style="width:120px;" id="address-postcode" name="address-postcode" type="text">
-                      </div>
-                      <div class="govuk-form-group">
-                          <label class="govuk-label" for="reason">
-                              Reason for being anonymous
-                          </label>
-                          <span class="govuk-hint"> This will not be on the vacancy. We will consider this when considering your request to remain anonymous.</span>
-                          <textarea class="govuk-textarea govuk-!-width-three-quarters js-character-count" data-module="character-count" data-minlength="50" data-maxlength="200" rows="5" id="reason" name="reason" type="text"></textarea>
-                          <span style="float:left;">200 characters left</span>
-                      </div>
+                      <input class="govuk-input govuk-input--width-20" style="width:120px;" id="address-postcode" name="address-postcode" type="text">
+                  </div>
+                  <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="200">
+                    <div class="govuk-form-group">
+                      <label class="govuk-label" for="reason">
+                          Reason for being anonymous
+                      </label>
+                      <div class="govuk-hint"> This will not be on the vacancy. We will consider this when considering your request to remain anonymous.</div>
+                      <textarea class="govuk-textarea govuk-!-width-three-quarters js-character-count" data-module="character-count" data-minlength="50" data-maxlength="200" rows="5" id="reason" name="reason" type="text"></textarea>
+                    </div>
+                    <div id="with-hint-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
+                          200 characters remaining
+                    </div>
+                  </div>
 
-                  </fieldset>
+                </fieldset>
 
               </div>
             </div>
