--- a/app/views/v6/employer/create/employers-select.html
+++ b/app/views/v6/employer/create/employers-select.html
@@ -31,8 +31,8 @@ Which organisation is this advert for? - Your apprenticeship adverts - {{service
     {% endif %} -->
 
     <!-- <span class="govuk-caption-xl">Recuitment</span> -->
-    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl">Which organisation is this advert for?</h1>
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Which organisation is this advert for?</h1>
 
     <!--<form method="post" id="employers-form" action="create-vacancy">-->
     <form method="post" id="employers-form">
