--- a/app/views/v6/employer/create/qualifications-list.html
+++ b/app/views/v6/employer/create/qualifications-list.html
@@ -19,8 +19,8 @@ Qualifications - Your apprenticeship advert - {{serviceName}} - GOV.UK
                 <p class="govuk-body govuk-!-margin-bottom-0">Succesfully removed qualification</p>
         </div>
         {% endif %}
-        <h1 class="govuk-heading-xl">
-          <span class="govuk-caption-l">{% if data.title %}{{data.title}}{% else %}Developer apprenticeship{% endif %}</span>
+        <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">
+          <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
           Qualifications
         </h1>
         <table class="govuk-table responsive-table">
