--- a/app/views/v6/employer/create/qualifications.html
+++ b/app/views/v6/employer/create/qualifications.html
@@ -30,8 +30,8 @@ What qualifications would you like the applicant to have? - Your apprenticeship 
             </div>
           </div>
           {% endif %}
-        <h1 class="govuk-heading-xl">
-          <span class="govuk-caption-l">{% if data.title %}{{data.title}}{% else %}Developer apprenticeship{% endif %}</span>
+         <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">
+          <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
           What qualifications does the applicant need to have?
         </h1>
         <p class="govuk-hint"> <a class="govuk-link--no-visited-state"  target="_blank" href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels"> What's the GCSE grading system? (opens in a new tab)</a></p>
@@ -70,7 +70,7 @@ What qualifications would you like the applicant to have? - Your apprenticeship 
 
           <div class="govuk-form-group">
               <fieldset class="govuk-fieldset">
-                  <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                  <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                       <h1 class="govuk-fieldset__heading">Is this qualification essential or desirable?</h1>
                   </legend>
                   <div class="govuk-radios govuk-radios--inline">
