--- a/app/views/v6/employer/create/select-training-provider.html
+++ b/app/views/v6/employer/create/select-training-provider.html
@@ -31,9 +31,9 @@ Have you found a training provider? - Your apprenticeship adverts - {{serviceNam
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-            <span class="govuk-caption-l">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
-            <h1 class="govuk-fieldset__heading">
-              Enter the name of the training provider or UKPRN 
+            <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+            <h1 class="govuk-label-wrapper">
+              <label class="govuk-label govuk-label--xl" for="searchClients">Enter the name of the training provider or UKPRN 
             </h1>
           </legend>
           <div id="contact-hint" class="govuk-hint">
