--- a/app/views/v6/employer/create/start-page.html
+++ b/app/views/v6/employer/create/start-page.html
@@ -21,8 +21,7 @@ Create an advert - Your apprenticeship adverts - {{serviceName}} - GOV.UK
       <h2 class="govuk-heading-m">Before you start</h2>
       <p class="govuk-body">Before you create an advert, you’ll need to know:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>the name of the apprenticeship training course</li>
-        <li>the name of the training provider - if you don’t have a training provider yet, you can <a href="#" class="govuk-link govuk-link--no-visited-state">find a provider (opens in a new tab)</a></li>
+        <li>the name of the apprenticeship training course and training provider - if you haven't found training provider yet, use <a href="#" class="govuk-link govuk-link--no-visited-state">Find apprenticeship training for your apprentice (opens in a new tab)</a></li>
         <li>the duration of the apprenticeship</li>
         <li>the number of hours spent working and training</li>
         <li>how much your apprentice will be paid</li>
