--- a/app/views/v6/employer/create/about-employer.html
+++ b/app/views/v6/employer/create/about-employer.html
@@ -17,8 +17,8 @@ Add some information - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl">Information about {{data.orgName}}</h1>
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+        <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Information about {{data.orgName}}</h1>
     {% if data.EmployerDescription and data.journey != 'new' %}
     <p class="govuk-body">Updating the employer information will also update the employer information on any unapproved vacancies eg. draft, pending review or rejected vacancies.</p>
     {%else%}
