--- a/app/views/v6/employer/create/confirm-training-provider.html
+++ b/app/views/v6/employer/create/confirm-training-provider.html
@@ -11,8 +11,8 @@ Manage apprentices
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <!-- <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %} vacancy</span> -->
-    <h1 class="govuk-heading-xl">
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">
       Confirm the training provider
     </h1>
     <div class="das-confirm-card" style="background-color:#f4f4f4;padding:20px;margin-bottom:30px;">
