--- a/app/views/v6/employer/create/contact.html
+++ b/app/views/v6/employer/create/contact.html
@@ -17,7 +17,8 @@ Add contact information - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl"><span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">
+      <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
       Contact details for ABC Opticians (optional)
     </h1>
     <p class="govuk-body">This should be someone an applicant can contact to ask questions about the apprenticeship position.</p>
