--- a/app/views/v6/employer/create/duration.html
+++ b/app/views/v6/employer/create/duration.html
@@ -4,7 +4,6 @@
 Duration and working hours - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
 
-
 {% block beforeContent %}
 {{super()}}
 <a href="javascript:history.back()" class="govuk-back-link">Back</a>
@@ -13,17 +12,16 @@ Duration and working hours - Your apprenticeship adverts - {{serviceName}} - GOV
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-xl">Duration and working hours</h1>
+  <div class="govuk-grid-column-two-thirds">
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Duration and working hours</h1>
 
     <form method="post">
       <div class="govuk-form-group">
-        <br>
-        <label class="govuk-label govuk-!-font-weight-bold" for="duration">
+        <label class="govuk-label govuk-label--m" for="duration">
           How long is the whole apprenticeship, including work and training?
         </label>
-        <span class="govuk-hint">The apprenticeship must last for at least 12 months.</span>
-        <span class="govuk-hint">For {{data.training_level or "Food and Drink: Fish and Shellfish Industry Skills"}}, typical length is 18 months.</span><br>
+        <div class="govuk-hint">The apprenticeship must last for at least 12 months. For {{data.training_level or "Food and Drink: Fish and Shellfish Industry Skills"}}, typical length is 18 months.</div>
         <input class="govuk-input govuk-input--width-4" id="duration" name="duration" type="text">
         <select class="govuk-select" id="sort" name="sort">
 
@@ -34,7 +32,7 @@ Duration and working hours - Your apprenticeship adverts - {{serviceName}} - GOV
 
       <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="250">
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-!-font-weight-bold" for="workingWeekDescription">
+          <label class="govuk-label govuk-label--m" for="workingWeekDescription">
             Details of working week
           </label>
           <div id="workingWeekDescription-hint" class="govuk-hint">
@@ -48,12 +46,14 @@ Duration and working hours - Your apprenticeship adverts - {{serviceName}} - GOV
       </div>
 
       <div class="govuk-form-group">
-        <label class="govuk-label govuk-!-font-weight-bold" for="weekly-hours">
+        <label class="govuk-label govuk-label--m" for="weekly-hours">
           How many hours will the apprentice work each week, including training?
         </label>
 
-        <input class="govuk-input govuk-input--width-4" id="weekly-hours" name="weeklyHours" type="text" {% if data.weeklyHours and data.edit == "yes"%} value="{{data.weeklyHours}}" {%endif%}>
-        <span class="govuk-body"> hours</span>
+        <div class="govuk-input__wrapper">
+          <input class="govuk-input govuk-input--width-4" id="weekly-hours" name="weeklyHours" type="text" {% if data.weeklyHours and data.edit == "yes"%} value="{{data.weeklyHours}}" {%endif%}>
+          <div class="govuk-input__suffix" aria-hidden="true">hours</div>
+        </div>
       </div>
       
       <div class="govuk-button-group">
