--- a/app/views/v6/employer/create/long-description.html
+++ b/app/views/v6/employer/create/long-description.html
@@ -39,14 +39,14 @@ Description of the vacancy - Your apprenticeship adverts - {{serviceName}} - GOV
     </div>
     {% endif%}
 
-    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl">About the apprenticeship 
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">About the apprenticeship 
     </h1>
     <form method="post">
       <fieldset class="govuk-fieldset">
         <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="500">
           <div class="govuk-form-group {% if 'VacancyDescription' in data.errorType %}govuk-form-group--error{% endif %}">
-            <label class="govuk-label govuk-!-font-weight-bold" for="VacancyDescription">
+            <label class="govuk-label govuk-label--m" for="VacancyDescription">
               What will the apprentice be doing?
             </label>
             <span class="govuk-hint">Describe what an average day or week will be like and what tasks the apprentice could be doing.</span>
@@ -67,7 +67,7 @@ Description of the vacancy - Your apprenticeship adverts - {{serviceName}} - GOV
         </div>
         <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="500">
           <div class="govuk-form-group {% if 'TrainingQualification' in data.errorType %}govuk-form-group--error{% endif %}">
-            <label class="govuk-label govuk-!-font-weight-bold" for="TrainingQualification">
+            <label class="govuk-label govuk-label--m" for="TrainingQualification">
               What training will the apprentice take and what qualification will the apprentice get at the end?
             </label>
             <p class="govuk-body">You must include information about the following:</p>
@@ -92,12 +92,12 @@ Description of the vacancy - Your apprenticeship adverts - {{serviceName}} - GOV
         </div>
         <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="500">
           <div class="govuk-form-group {% if 'OutcomeDescription' in data.errorType %}govuk-form-group--error{% endif%}">
-            <label class="govuk-label govuk-!-font-weight-bold" for="OutcomeDescription">
+            <label class="govuk-label govuk-label--m" for="OutcomeDescription">
               What is the expected career progression after this apprenticeship?
             </label>
-            <span id="more-detail-hint" class="govuk-hint ">
+            <div id="more-detail-hint" class="govuk-hint ">
               You may want to mention specific routes they could take once qualified.
-            </span>
+            </div>
             {% if 'OutcomeDescription' in data.errorType %}
             <span id="OutcomeDescription-error" class="govuk-error-message">
               <span class="govuk-visually-hidden">Error:</span> Expected career progression must not contain contain a banned word or phrase
