--- a/app/views/v6/employer/create/title.html
+++ b/app/views/v6/employer/create/title.html
@@ -25,7 +25,7 @@ What do you want to call this advert? - Your apprenticeship adverts - {{serviceN
         <p class="govuk-body">To make sure your advert appears in search results, use a title that relates to the apprenticeship training.</p>
       <div class="govuk-character-count" data-module="character-count" data-maxlength="100">
         <div class="govuk-form-group govuk-!-margin-bottom-8">
-          <span class="govuk-hint">You must include the word ‘apprentice’ or ‘apprenticeship’ </span>
+          <div class="govuk-hint">You must include the word ‘apprentice’ or ‘apprenticeship’ </div>
           <input class="govuk-input govuk-!-width-three-quarters js-character-count" id="title" name="title" type="text" value="{% if data.title and data.edit == 'yes' %}{{data.title}}{%endif%}">
         </div>
       </div>
