--- a/app/views/v6/provider/create/long-description.html
+++ b/app/views/v6/provider/create/long-description.html
@@ -55,7 +55,7 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
             <div class="govuk-hint">Describe what an average day or week will be like and what tasks they could be doing.</div>
 
             <div class="govuk-inset-text">
-             You must include at least 3 bullet points or your advert will be rejected.
+             You must include at least 3 bullet points or your vacancy will be rejected.
             </div>
 
             {% if 'VacancyDescription' in data.errorType %}
