--- a/app/views/v6/traineeships/create/long-description.html
+++ b/app/views/v6/traineeships/create/long-description.html
@@ -42,7 +42,7 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
     {% endif%}
 
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">About the apprenticeship</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Tasks and training details</h1>
 
     <form method="post">
 
@@ -50,12 +50,12 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
         <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="500">
           <div class="govuk-form-group {% if 'VacancyDescription' in data.errorType %}govuk-form-group--error{% endif %}">
             <label class="govuk-label govuk-label--m" for="VacancyDescription">
-              What will the apprentice be doing?
+              What will the trainee be doing?
             </label>
             <div class="govuk-hint">Describe what an average day or week will be like and what tasks they could be doing.</div>
 
             <div class="govuk-inset-text">
-             You must include at least 3 bullet points or your advert will be rejected.
+             You must include at least 3 bullet points or your vacancy will be rejected.
             </div>
 
             {% if 'VacancyDescription' in data.errorType %}
@@ -69,16 +69,12 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
         <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="500">
           <div class="govuk-form-group {% if 'TrainingQualification' in data.errorType %}govuk-form-group--error{% endif %}">
             <label class="govuk-label govuk-label--m" for="TrainingQualification">
-              What training will the apprentice take and what qualification will the apprentice get at the end?
+              What training will the trainee get?
             </label>
             <p class="govuk-body">You must include information about the following:</p>
             <ul class="govuk-list govuk-list--bullet">
-              <li>
-                the qualification they will get at the end. You may want to have a look at the&nbsp; <a href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels" class="govuk-link">types of qualifications
-                  available
-                  (opens in new tab)</a>
-              </li>
-              <li>where and when the apprentice will do their training. If you can, add detail about the location of the training. It would also be helpful to include if it is a day a week or block release </li>
+              <li>the training and support they’ll get on the placement</li>
+              <li>the skills they can expect to develop during the traineeship </li>
             </ul>
             {% if 'TrainingQualification' in data.errorType %}
             <span id="TrainingQualification-error" class="govuk-error-message">
