--- a/app/views/v6/_summary.html
+++ b/app/views/v6/_summary.html
@@ -55,7 +55,7 @@
         <a href="v6/employer/login?startpage=1" class="govuk-button" style="background: #6F72AF" data-module="govuk-button">Create an advert (new user)</a>
       </div>
 
-      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Provider prototype</h4>
+      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Provider prototype <span style="font-weight: normal">(includes traineeship journey) </span></h4>
 
       <div class="govuk-button-group">
         <a href="v6/provider/login" class="govuk-button" style="background:#F47737" data-module="govuk-button">Create a vacancy</a> 
