--- a/app/views/v6/provider/account-home.html
+++ b/app/views/v6/provider/account-home.html
@@ -108,6 +108,13 @@
 						<p>Find and view organisations and their agreement IDs.</p>
 					</div>
 
+					<div class="govuk-grid-column-one-half">
+						<h2 class="govuk-heading-m">
+							<a href="{% if data.startpage == 1 %}../traineeships/create/start-page{% else %}../traineeships/dashboard{% endif %}" class="govuk-link govuk-link--no-visited-state">Recruit trainees</a>
+						</h2>
+						<p>Create a vacancy to recruit a trainee and manage applications.</p>
+					</div>
+
 					
 				</div>	
 
