--- a/app/views/v6/traineeships/create/start-page.html
+++ b/app/views/v6/traineeships/create/start-page.html
@@ -16,16 +16,15 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">Create a vacancy</h1>
-      <p class="govuk-body-l">Recruit an apprentice by creating a vacancy on <a href="https://www.gov.uk/apply-apprenticeship" class="govuk-link govuk-link--no-visited-state" target="_blank">Find an apprenticeship (opens in a new tab)</a>.</p>
+      <p class="govuk-body-l">Recruit a trainee by creating a vacancy on <a href="https://www.gov.uk/find-traineeship" class="govuk-link govuk-link--no-visited-state" target="_blank">Find a traineeship (opens in a new tab)</a>.</p>
       
       <h2 class="govuk-heading-m">Before you start</h2>
       <p class="govuk-body">Before you create a vacancy, you’ll need to know:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>the name of the employer</li>
-        <li>the name of the apprenticeship training course</li>
+        <li>what the trainee will be doing on the placement and the training they will get</li>
         <li>the duration of the apprenticeship</li>
-        <li>the number of hours spent working and training</li>
-        <li>how much your apprentice will be paid</li>
+        <li>the number of hours the trainee will be on placement each week</li>
       </ul>
 
       <div class="govuk-inset-text">
