Updates made to traineeship journey

--- a/app/views/v6/traineeships/create/dates.html
+++ b/app/views/v6/traineeships/create/dates.html
@@ -27,7 +27,7 @@ Important dates - Recruitment - {{serviceName}} - GOV.UK
       </div>
     </div>
     {% endif %}
-    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
     <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Closing and start dates</h1>
     <!-- {% if data.expiryDate %}
     <div class="govuk-warning-text">
