--- a/app/views/v6/traineeships/create/location.html
+++ b/app/views/v6/traineeships/create/location.html
@@ -17,7 +17,7 @@ Where will the apprentices work? - Recruitment - {{serviceName}} - GOV.UK
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-            <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+            <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
             <h1 class="govuk-fieldset__heading">
               Where {% if data.numberOfPositions > 1 %}will the 6 positions{% else %}will the trainee{% endif %} work?
             </h1>
