--- a/app/views/v6/traineeships/create/short-description.html
+++ b/app/views/v6/traineeships/create/short-description.html
@@ -13,7 +13,7 @@ Short description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
     <h1 class="govuk-label-wrapper">
       <label class="govuk-label govuk-label--xl" for="shortDescription">
         Summary of the traineeship
