--- a/app/views/v6/traineeships/create/things-to-consider.html
+++ b/app/views/v6/traineeships/create/things-to-consider.html
@@ -15,7 +15,7 @@ What else do you want the applicant to consider? (optional) - Recruitment - {{se
   
     <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="350">
       <div class="govuk-form-group">
-        <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+        <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
         <h1 class="govuk-label-wrapper">
           <label class="govuk-label govuk-label--xl" for="ThingsToConsider">
             What else do you want the applicant to consider? (optional)
