--- a/app/views/v6/traineeships/create/application-process.html
+++ b/app/views/v6/traineeships/create/application-process.html
@@ -16,7 +16,7 @@ How would you like to receive applications? - Recruitment - {{serviceName}} - GO
     <form method="post" action="task-list?section4=completed">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-          <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+          <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
           <h1 class="govuk-fieldset__heading">How would you like to receive applications?</h1>
         </legend>
         <p class="govuk-body">We'll publish all vacancies on <a href="https://www.gov.uk/find-traineeship" target="_blank" class="govuk-body govuk-link" rel="noopener" target="_blank">Find a traineeship (opens in a new tab)</a>.</p>
