--- a/app/views/v6/traineeships/create/contact.html
+++ b/app/views/v6/traineeships/create/contact.html
@@ -14,7 +14,7 @@ Add contact information - Recruitment - {{serviceName}} - GOV.UK
 
     <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
-            <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+            <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
             <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">
               Do you want to add any contact details for {% if data.user == "employer" %}{{data.orgName}}{% else %}{{ data.providerName}}{% endif %}?
             </h1>
