--- a/app/views/v6/traineeships/create/duration.html
+++ b/app/views/v6/traineeships/create/duration.html
@@ -13,10 +13,10 @@ Duration and working hours - Recruitment - {{serviceName}} - GOV.UK
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
     <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Duration and working hours</h1>
 
-    <form method="post">
+    <form method="post" action="positions">
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="duration">
           How long is the traineeship?
