--- a/app/views/v6/traineeships/create/employer-name.html
+++ b/app/views/v6/traineeships/create/employer-name.html
@@ -13,7 +13,7 @@ Which employer name do you want on your vacancy? - Recruitment - {{serviceName}}
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
     <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">What employer name do you want to go on the vacancy?</h1>
     <form method="post" action="about-employer">
       <div class="govuk-form-group">
