--- a/app/views/v6/traineeships/create/long-description.html
+++ b/app/views/v6/traineeships/create/long-description.html
@@ -41,7 +41,7 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
     </div>
     {% endif%}
 
-    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
     <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Tasks and training details</h1>
 
     <form method="post">
