--- a/app/views/v6/traineeships/create/positions.html
+++ b/app/views/v6/traineeships/create/positions.html
@@ -16,7 +16,7 @@ How many positions are there for this apprenticeship? - Recruitment - {{serviceN
     <form method="post" action="location">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-          <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+          <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
           <h1 class="govuk-label-wrapper">
             <label class="govuk-label govuk-label--xl" for="numberOfPositions">
               How many positions are available?
