--- a/app/views/v6/traineeships/create/skills.html
+++ b/app/views/v6/traineeships/create/skills.html
@@ -11,15 +11,13 @@ Manage apprentices
 
 {% block content %}
 
-  <div class="govuk-width-container">
 
-  <main class="govuk-main-wrapper">
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+        <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">What skills and personal qualities do applicants need to have?</h1>
-        <form method="post" action="skills">
+        <form method="post" action="future-prospects">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--s" id="SkillsHeading"></legend>
           {{data.Skills}}
           <div class="govuk-hint">
@@ -128,8 +126,7 @@ Manage apprentices
       </div>
   </div>
 
-  </main>
-</div>
+
 {% endblock %}
 
 {% block pageScripts %}
