Updated copy on traineeships start page and updated CYA

--- a/app/views/v6/traineeships/create/start-page.html
+++ b/app/views/v6/traineeships/create/start-page.html
@@ -23,13 +23,9 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
       <ul class="govuk-list govuk-list--bullet">
         <li>the name of the employer</li>
         <li>what the trainee will be doing on the placement and the training they will get</li>
-        <li>the duration of the apprenticeship</li>
+        <li>the duration of the traineeship</li>
         <li>the number of hours the trainee will be on placement each week</li>
       </ul>
-
-      <div class="govuk-inset-text">
-        You can use our recruitment <a href="https://www.gov.uk/guidance/get-started-with-the-recruitment-apis-as-a-training-provider" target="_blank">Application Programming Interfaces (APIs) (opens in a new tab)</a> to create vacancies using your existing systems or display vacancies from Find an apprenticeship on your websites.
-      </div>
 
 
       {% set _forwardLink = "task-list" %}
