--- a/app/views/v6/traineeships/create/check-your-answers.html
+++ b/app/views/v6/traineeships/create/check-your-answers.html
@@ -34,7 +34,20 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Training course
+              Name of organisation
+            </dt>
+            <dd class="govuk-summary-list__value">
+              [[selected organisation]]
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> organisation</span>
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Traineeship sector 
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected training]]
@@ -45,22 +58,10 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Training provider
-            </dt>
-            <dd class="govuk-summary-list__value">
-              [[your training provider]]
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> training provider</span>
-              </a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Summary of the apprenticeship
+              Summary of the traineeship
             </dt>
             <dd class="govuk-summary-list__value">
               [[your short description]]
@@ -73,14 +74,13 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              What will the apprentice be doing?
+              What will the trainee be doing?
               <br>
               <br>
-              Training and qualification levels
+              Work experience and training provided
             </dt>
             <dd class="govuk-summary-list__value">
               [[your description]]
-              <br>
               <br>
               <br>
               <br>
@@ -103,7 +103,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
               Application closing date
               <br>
               <br>
-              Apprenticeship start date
+              Traineeship start date
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected dates]]
@@ -119,25 +119,6 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Pay rate
-              <br>
-              <br>
-              Extra information about pay (optional)
-            </dt>
-            <dd class="govuk-summary-list__value">
-              [[selected pay]]
-              <br>
-              <br>
-              [[your description, or if the user has not written anything just put None]]
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> description</span>
-              </a>
-            </dd>
-          </div>
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -222,22 +203,6 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Qualifications
-            </dt>
-            <dd class="govuk-summary-list__value">
-              <ul class="govuk-list govuk-list--bullet">
-                <li>[[Qualificattion information]]</li>
-       <!--          <li>GCSE or equivalent English (Grade 8) essential</li> -->
-              </ul>
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> description</span>
-              </a>
-            </dd>
-          </div>
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -271,19 +236,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
         <h2 class="govuk-heading-m">About the employer</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Name of organisation
-            </dt>
-            <dd class="govuk-summary-list__value">
-              [[selected organisation]]
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> organisation</span>
-              </a>
-            </dd>
-          </div>
+          
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Name of employer on vacancy
