Added new occupational page to traineeships and further amendments

--- a/app/views/v6/traineeships/create/employer.html
+++ b/app/views/v6/traineeships/create/employer.html
@@ -131,7 +131,7 @@ Which employer name do you want on your vacancy? - Recruitment - {{serviceName}}
                 <div class="govuk-form-group">
                   {{ govukButton({
                     text: "Save and continue",
-                    href: "std-select"
+                    href: "occupational-traineeship"
                   }) }}   
                   <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
                   <!--<input type="submit" class="govuk-button" data-module="govuk-button" data-automation="btn-continue" name="button" value="Preview">-->
