--- a/app/views/v6/provider/create/check-your-answers.html
+++ b/app/views/v6/provider/create/check-your-answers.html
@@ -34,6 +34,19 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
+              Name of organisation
+            </dt>
+            <dd class="govuk-summary-list__value">
+              [[selected organisation]]
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> organisation</span>
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
               Training course
             </dt>
             <dd class="govuk-summary-list__value">
@@ -197,7 +210,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
        
         </dl>
 
-        <h2 class="govuk-heading-m">Skills and qualifications</h2>
+        <h2 class="govuk-heading-m">Requirements and prospects</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
 
@@ -271,19 +284,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
         <h2 class="govuk-heading-m">About the employer</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Name of organisation
-            </dt>
-            <dd class="govuk-summary-list__value">
-              [[selected organisation]]
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> organisation</span>
-              </a>
-            </dd>
-          </div>
+      
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Name of employer on vacancy
