--- a/app/views/v6/provider/create/long-description.html
+++ b/app/views/v6/provider/create/long-description.html
@@ -42,7 +42,7 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
     {% endif%}
 
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">About the apprenticeship</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Tasks and training details</h1>
 
     <form method="post">
 
