--- a/app/views/v6/provider/create/short-description.html
+++ b/app/views/v6/provider/create/short-description.html
@@ -20,7 +20,7 @@ Short description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
       </label>
     </h1>
     <form method="post">
-      <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="350">
+      <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="350">
         <div class="govuk-form-group">
 
           <p class="govuk-body">Write a few sentences about the vacancy to attract applicants. This is an important part of what applicants will see when looking through a list of vacancies, so make it stand out.</p>
@@ -33,7 +33,10 @@ Short description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
           <!-- <label class="govuk-label govuk-!-font-weight-bold" for="shortDescription">
               Write a few sentences to describe your vacancy
           </label> -->
-          <textarea class="govuk-textarea js-character-count " id="shortDescription" name="shortDescription" rows="5">{% if data.shortDescription and data.edit == "yes" %}{{data.shortDescription}}{% endif %}</textarea>
+          <textarea class="govuk-textarea govuk-js-character-count" id="shortDescription" name="shortDescription" rows="5">{% if data.shortDescription and data.edit == "yes" %}{{data.shortDescription}}{% endif %}</textarea>
+        </div>
+        <div id="shortDescription-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
+          You can enter up to 350 characters
         </div>
       </div>
       
