--- a/app/views/v6/provider/create/future-prospects.html
+++ b/app/views/v6/provider/create/future-prospects.html
@@ -14,24 +14,18 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-  
-    <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="200">
-      <div class="govuk-form-group">
-        <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-        <h1 class="govuk-label-wrapper">
-          <label class="govuk-label govuk-label--xl" for="OutcomeDescription">
-            What is the expected career progression after this apprenticeship?
-          </label>
-        </h1>
-        <div id="with-hint-hint" class="govuk-hint">
-          You may want to mention specific routes they could take once qualified.
-        </div>
-        <textarea class="govuk-textarea govuk-js-character-count" id="OutcomeDescription" name="OutcomeDescription" rows="5" aria-describedby="OutcomeDescription-info OutcomeDescription-hint"></textarea>
-      </div>
 
-      <div id="OutcomeDescription-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
-        You can enter up to 200 characters
+    <div class="govuk-form-group">
+      <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+      <h1 class="govuk-label-wrapper">
+        <label class="govuk-label govuk-label--xl" for="OutcomeDescription">
+          What is the expected career progression after this apprenticeship?
+        </label>
+      </h1>
+      <div id="with-hint-hint" class="govuk-hint">
+        You may want to mention specific routes they could take once qualified.
       </div>
+      <textarea class="govuk-textarea" id="OutcomeDescription" name="OutcomeDescription" rows="5" aria-describedby="OutcomeDescription-info OutcomeDescription-hint"></textarea>
     </div>
     
     <form method="post">
