--- a/app/views/v6/traineeships/create/things-to-consider.html
+++ b/app/views/v6/traineeships/create/things-to-consider.html
@@ -12,26 +12,20 @@ What else do you want the applicant to consider? (optional) - Recruitment - {{se
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-  
-    <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="350">
-      <div class="govuk-form-group">
-        <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
-        <h1 class="govuk-label-wrapper">
-          <label class="govuk-label govuk-label--xl" for="ThingsToConsider">
-            What else do you want the applicant to consider? (optional)
-          </label>
-        </h1>
-        <div id="with-hint-hint" class="govuk-hint">
-          For example, if the vacancy will involve working outdoors or lifting heavy objects
-        </div>
-        <textarea class="govuk-textarea govuk-js-character-count" id="ThingsToConsider" name="ThingsToConsider" rows="5" aria-describedby="ThingsToConsider-info ThingsToConsider-hint"></textarea>
-      </div>
-
-      <div id="ThingsToConsider-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
-        You can enter up to 200 characters
-      </div>
-    </div>
     
+    <div class="govuk-form-group">
+      <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
+      <h1 class="govuk-label-wrapper">
+        <label class="govuk-label govuk-label--xl" for="ThingsToConsider">
+          What else do you want the applicant to consider? (optional)
+        </label>
+      </h1>
+      <div id="with-hint-hint" class="govuk-hint">
+        For example, if the vacancy will involve working outdoors or lifting heavy objects
+      </div>
+      <textarea class="govuk-textarea" id="ThingsToConsider" name="ThingsToConsider" rows="5" aria-describedby="ThingsToConsider-info ThingsToConsider-hint"></textarea>
+    </div>
+ 
     <form method="post">
       <div class="govuk-button-group">
         <button class="govuk-button" data-module="govuk-button">Save and continue</button>
